<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="120dp"
              android:focusable="true"
              android:id="@+id/layout_item"
              android:clickable="true"
              android:background="@drawable/list_hover"
              android:layout_marginTop="10dp">

    <ImageView
            android:layout_width="100dp"
            android:padding="5dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/noimage"
            android:id="@+id/iv_poster"
            android:contentDescription="@string/poster"/>

    <LinearLayout
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/tv_title"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:id="@+id/tv_author"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publishYear"
                android:id="@+id/tv_publishYear"
                android:textStyle="italic"/>

    </LinearLayout>

</LinearLayout>