<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:minHeight="600dp"
            android:minWidth="400dp"
            android:background="@color/lightGrey">

        <TextView
                android:gravity="center_horizontal"
                android:id="@+id/tv_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="40dp"
                android:text="@string/adding_a_new_book"
                android:textStyle="bold"
                android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/title"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_title"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/author"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_author"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/publishYear"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_publishYear"
                    android:inputType="number"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/pages"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_numberOfPages"
                    android:inputType="number"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/description"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_description"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:layout_width="200dp"
                android:id="@+id/btn_save"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:background="@drawable/button_hover"
                android:textColor="@android:color/white"
                android:text="@string/save"/>

    </LinearLayout>
</ScrollView>